@@ -1708,7 +1708,7 @@ intersectLines(ON_Line &l1, ON_Line &l2, ON_3dPoint &out)
     struct bn_tol tol;
 
     tol.magic = BN_TOL_MAGIC;
-    tol.dist = 0.005;
+    tol.dist = 0.0005;
     tol.dist_sq = tol.dist * tol.dist;
     tol.perp = 1e-6;
     tol.para = 1 - tol.perp;
