@@ -2756,7 +2756,7 @@ nmg_do_radial_flips(struct bu_list *hd)
     struct bn_tol tol;
 
     tol.magic = BN_TOL_MAGIC;
-    tol.dist = 0.005;
+    tol.dist = 0.0005;
     tol.dist_sq = tol.dist * tol.dist;
     tol.perp = 1e-6;
     tol.para = 1 - tol.perp;
